# pelican-math-svg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml  tasks.py  tox.ini
.github/workflows/: main.yml  python-package.yml  python-publish.yml
pelican/plugins/math_svg/: __init__.py  database.py  extension.py  main.py  markdown_extension.py  math_svg.py  math_svg_test.py  pelican_math_markdown_extension.py  render.py  settings.py  svgo.js  test_math_svg.py
tests/: test_math_svg.py
