[tool.poetry]
name = "pelican-math-svg"
version = "0.1.4"
description = "Render math expressions to svg and embed them."
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
license = "GPLv3"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/f-koehler/pelican-math-svg"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/f-koehler/pelican-math-svg/issues"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5"
markdown = {version = "^3.2.2", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8"
flake8-black = "^0.2.1"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2.2"
pytest = "^6.0"
pytest-cov = "^2.7"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
Werkzeug = "^1.0"
bandit = "^1.6.2"
mypy = "^0.790"
pylint = "^2.6.0"
jedi = "^0.17.2"

[tool.poetry.extras]
markdown = ["markdown"]

# [tool.autopub]
# project-name = "math-svg"
# git-username = "botpub"
# git-email = "botpub@autopub.rocks"

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
