[tool.poetry]
name = "pelican-math-svg"
version = "0.7.2"
description = "Render math expressions to svg and embed them."
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
license = "AGLP-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/f-koehler/pelican-math-svg"
documentation = "https://docs.getpelican.com"
packages = [{ include="pelican" }]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/f-koehler/pelican-math-svg/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = "^4.5"
markdown = { version="^3.2.2", optional=true }
lxml = "^4.6.3"
setuptools = "^57.1.0"

[tool.poetry.dev-dependencies]
black = { version="^21.6b0", allow-prereleases=true }
flake8 = "^3.8"
flake8-black = "^0.2.1"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2.2"
pytest = "^6.0"
pytest-cov = "^2.7"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
Werkzeug = "^2.0"
bandit = "^1.6.2"
mypy = "^0.910"
pylint = "^2.6.0"
jedi = "^0.18.0"
pre-commit = "^2.11.1"
types-Markdown = "^3.3.0"

[tool.poetry.scripts]
pelican-math-svg = "pelican.plugins.math_svg.main:main"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "math-svg"
git-username = "f-koehler"
git-email = "fabian.koehler@protonmail.ch"

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
