[tool.poetry]
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
description = "Render math expressions to svg and embed them."
documentation = "https://docs.getpelican.com"
keywords = ["pelican", "plugin"]
license = "AGLP-3.0"
name = "pelican-math-svg"
packages = [{include = "pelican"}]
readme = "README.md"
repository = "https://github.com/f-koehler/pelican-math-svg"
version = "0.9.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Pelican",
  "Framework :: Pelican :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/f-koehler/pelican-math-svg/issues"

[tool.poetry.dependencies]
lxml = "^4.6.3"
markdown = {version = "^3.2.2", optional = true}
pelican = "^4.5"
python = ">=3.10,<4.0"
setuptools = "^57.1.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0"
bandit = "^1.6.2"
black = {version = "^22.1", allow-prereleases = true}
flake8 = "^4.0"
flake8-black = "^0.3.2"
invoke = "^1.3"
isort = "^5.4"
jedi = "^0.18.0"
livereload = "^2.6"
markdown = "^3.2.2"
mypy = "^0.942"
pre-commit = "^2.11.1"
pylint = "^2.6.0"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
types-Markdown = "^3.3.0"

[tool.poetry.scripts]
pelican-math-svg = "pelican.plugins.math_svg.main:app"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
git-email = "fabian.koehler@protonmail.ch"
git-username = "f-koehler"
project-name = "math-svg"

[tool.isort]
# Maintain compatibility with Black
multi_line_output = 3
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.0"]
